[package]
name = "functional_vec"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Owning versions of mutable Vec methods."
repository = "https://github.com/SKyletoft/functional_vec"
readme = "README.md"
keywords = [ "vec", "no_std" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = [ "vec", "vecdeque" ]

smallvec = []
vecdeque = []
vec = []