[package]
name = "functional_vec"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Owning versions of mutable Vec methods."
repository = "https://github.com/SKyletoft/functional_vec"
readme = "README.md"
keywords = [ "vec", "no_std" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = { version = "1.10.0", optional = true }

[features]
default = [ "vec", "vecdeque" ]

smallvec = [ "dep:smallvec" ]
vecdeque = []
vec = []